--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,18 @@
+alembic==1.8.1
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
 asttokens==2.0.8
 attrs==22.1.0
+autopage==0.5.1
 backcall==0.2.0
 beautifulsoup4==4.11.1
 bleach==5.0.1
 cffi==1.15.1
+cliff==4.0.0
+cmaes==0.8.2
+cmd2==2.4.2
 colorama==0.4.5
+colorlog==6.7.0
 cycler==0.11.0
 debugpy==1.6.3
 decorator==5.1.1
@@ -15,12 +21,15 @@ entrypoints==0.4
 executing==0.10.0
 fastjsonschema==2.16.1
 fonttools==4.37.1
+greenlet==1.1.3
+importlib-metadata==4.12.0
 ipykernel==6.15.1
 ipython==8.4.0
 ipython-genutils==0.2.0
 ipywidgets==8.0.1
 jedi==0.18.1
 Jinja2==3.1.2
+joblib==1.1.0
 jsonschema==4.14.0
 jupyter==1.0.0
 jupyter-console==6.4.4
@@ -30,6 +39,7 @@ jupyterlab-pygments==0.2.2
 jupyterlab-widgets==3.0.2
 kiwisolver==1.4.4
 lxml==4.9.1
+Mako==1.2.2
 MarkupSafe==2.1.1
 matplotlib==3.5.3
 matplotlib-inline==0.1.6
@@ -40,12 +50,15 @@ nbformat==5.4.0
 nest-asyncio==1.5.5
 notebook==6.4.12
 numpy==1.23.2
+optuna==3.0.0
 packaging==21.3
 pandas==1.4.3
 pandocfilters==1.5.0
 parso==0.8.3
+pbr==5.10.0
 pickleshare==0.7.5
 Pillow==9.2.0
+prettytable==3.4.0
 prometheus-client==0.14.1
 prompt-toolkit==3.0.30
 psutil==5.9.1
@@ -53,24 +66,35 @@ pure-eval==0.2.2
 pycparser==2.21
 Pygments==2.13.0
 pyparsing==3.0.9
+pyperclip==1.8.2
+pyreadline3==3.4.1
 pyrsistent==0.18.1
 python-dateutil==2.8.2
 pytz==2022.2.1
 pywin32==304
 pywinpty==2.0.7
+PyYAML==6.0
 pyzmq==23.2.1
 qtconsole==5.3.1
 QtPy==2.2.0
-scipy==1.9.1
+scikit-learn==1.1.2
+scipy==1.8.1
 seaborn==0.11.2
 Send2Trash==1.8.0
 six==1.16.0
+sklearn==0.0
 soupsieve==2.3.2.post1
+SQLAlchemy==1.4.40
 stack-data==0.5.0
+stevedore==4.0.0
 terminado==0.15.0
+threadpoolctl==3.1.0
 tinycss2==1.1.1
 tornado==6.2
+tqdm==4.64.0
 traitlets==5.3.0
+typing_extensions==4.3.0
 wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==4.0.2
+zipp==3.8.1
