--- a/.gitignore
+++ b/.gitignore
@@ -189,3 +189,6 @@ cython_debug/
 *.code-workspace
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,python
+
+# submissions
+submissions/
