--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -7,6 +7,10 @@
         {
             "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
             "automerge": true
+        },
+        {
+            "matchPackageNames": ["scipy"],
+            "allowedVersions": "<1.9.0"
         }
     ]
 }
